--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
   <head>
   <title>What Should I Do?</title>
   <link rel="stylesheet" type="text/css" href="static/style.css">
+  <script src="static/fblogin.js"></script>
   </head>
 
   <body>
+	  
       <div id='sbox'>
         <h1>What Should I Do?</h1>
         <span>Should I</span>
@@ -16,13 +18,19 @@
       
       <div class='popup'>
         <h1>Sign up:</h1>
-        <span>Username: </span>
+        <span>Email: </span>
         <input name='uname' type='text'/><br/>
         <span>Password: </span>
         <input name='pass' type='text'/><br/>
         <span>Confirm: </span>
         <input name='repass' type='text'/><br/>
         <input type='button' value='Login'/>
+        <div id="fb-root"></div>
+        <!--
+		  Below we include the Login Button social plugin. This button uses the JavaScript SDK to
+		  present a graphical Login button that triggers the FB.login() function when clicked. -->
+
+		<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
       </div>
   </body>
 </html>
