--- a/questions.html
+++ b/questions.html
@@ -1,26 +1,31 @@
 <html>
 
 <head>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-
-	<script src="dist/js/bootstrap.js"></script>
 	
 	<title>WSID Questions</title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+	</script>
+		<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
+
 	<link rel="stylesheet" type="text/css" href="static/questions_style.css">
+	<script src="dist/js/bootstrap.js"></script>
+
+	<script src="static/load_qs.js"></script>
 </head>
 
-<body onload="load_qs('qlist',0)">
+<body><!-- onload="load_qs('qlist',0)"> -->
+
+	<script src="dist/js/bootstrap.js"></script>
+	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="static/questions_style.css">
+
+
+	
 	<span id="top-right" type="logout">Log-out</span>
 	<h1>WSID Questions</h1>
 	<h3>Most recent</h3>
-	<h3><span class="label label-default">Most recent</span></h3>
+	<h4>this is h4</h4>
+	
 	<div class="question">
 		
 		<div id="qlist"></div>
