--- a/about.html
+++ b/about.html
@@ -8,34 +8,61 @@
     <script src="static/dist/js/bootstrap.js"></script>
   </head>
 	<body>
-		 <nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-				  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				  </button>
-				  <a class="navbar-brand" href="#">What Should I Do?</a>
-				</div>
-				   <!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					  <ul class="nav nav-pullright">
-						<li class="nav-pullleft" style="float:left;">
-							<a href="about.html">About</a>
-						</li>
-						<li class="nav-button" type="login" onclick="showLogin()">
-							<a href="#">Login</a>
-						</li>
-						<li class="nav-button" type="register" onclick="showReigster()">
-							<a href="#">Register</a>
-						</li>
-					  </ul>
-					  
-					</div> 
-			
-			</nav>
+	 <nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#">What Should I Do?</a>
+			</div>
+			   <!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				  <ul class="nav nav-pullright">
+					<li class="nav-pullleft" style="float:left;">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-button" type="login" onclick="showLogin()">
+						<a href="#">Login</a>
+					</li>
+					<li class="nav-button" type="register" onclick="showReigster()">
+						<a href="#">Register</a>
+					</li>
+				  </ul>
+				  
+				</div> 
+		</nav>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+			<div class="item active">
+			  <img src="..." alt="...">
+			  <div class="carousel-caption">
+				...
+			  </div>
+			</div>
+			...
+		  </div>
+
+		  <!-- Controls -->
+		  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+		  </a>
+		  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+		  </a>
+		</div>
+		
 	</body>
 </html>
