added sexy footer to about.html

--- a/index.html
+++ b/index.html
@@ -99,5 +99,10 @@ $def with ()
       </div>
       
       <div id='popup' class='popup'></div>
+      <div class="panel panel-default">
+		<div class="panel-body" style="text-align:right;">
+			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
+	  </div>
+	</div>
   </body>
 </html>
