--- a/static/about.html
+++ b/static/about.html
@@ -72,8 +72,7 @@
 	</div>
 	<div class="panel panel-default">
 		<div class="panel-body" style="text-align:right;">
-			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak
-
+			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
 	  </div>
 	</div>
 		
