fixed link to ariella.jpg

--- a/static/about.html
+++ b/static/about.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>What Should I Do?</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="static/fblogin.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
@@ -67,7 +67,7 @@
 		  </a>
 		</div>
 		<div class="item active">
-			<img src="static/ariella.jpg" alt="jack.jpg">
+			<img src="/static/ariella.jpg" alt="jack.jpg">
 		  <div class="carousel-caption">
 			<h3>...</h3>
 			<p><a class="btn btn-lg btn-primary" href="#" role="button">Ariella!</a></p>
