--- a/static/about.html
+++ b/static/about.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <title>What Should I Do?</title>
-    <link rel="stylesheet" type="text/css" href="/static/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="static/fblogin.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
-    <script src="static/dist/js/bootstrap.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
+    <script src="dist/js/bootstrap.js"></script>
   </head>
 	<body>
 	 <nav class="navbar navbar-default" role="navigation">
@@ -18,7 +18,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="../">What Should I Do?</a>
+			  <a class="navbar-brand" href="index.html">What Should I Do?</a>
 			</div>
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -67,17 +67,13 @@
 		  </a>
 		</div>
 		<div class="item active">
-			<img src="/static/ariella.jpg" alt="jack.jpg">
+			<img src="ariella.jpg" alt="jack.jpg">
 		  <div class="carousel-caption">
-			<h3>...</h3>
+			<h3>Ariella Levine, also known as the Head TA of UPENN</h3>
 			<p><a class="btn btn-lg btn-primary" href="#" role="button">Ariella!</a></p>
 		</div>
 	</div>
-	<div class="panel panel-default">
-		<div class="panel-body" style="text-align:right;">
-			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
-	  </div>
-	</div>
+
 		
 	</body>
 </html>
