--- a/static/questions.html
+++ b/static/questions.html
@@ -61,17 +61,17 @@ $def with (sess)
       </div>
 		</nav>
 	
-	<h1>WSID Questions</h1>
-	<h3>Should I...</h3>
+	<span id="top" style="border:none;">WSID Questions</span>
+	<h1>Should I...</h1>
 	
-	<div class="question">
+	<div class="question"><h3>
 		
 		<div id="qlist"></div>
-		
+		</h3>
 	</div>
 
-	<span class="bottom-left" onclick='pager.loadprev()'>Previous page</span>
-	<span class="bottom-right" onclick='pager.loadnext()'>Next page</span>
+	<span class="btn btn-info bottom-left" onclick='pager.loadprev()'>Previous page</span>
+	<span class="btn btn-info bottom-right" onclick='pager.loadnext()'>Next page</span>
   
       
     <div style='position: relative; top: 65%' class="panel panel-default">
