moved questions list to left of page

--- a/static/questions.html
+++ b/static/questions.html
@@ -65,7 +65,7 @@ $def with (sess)
     <span id="top" style="border:none;">WSID Questions</span>
     <h1>Should I...</h1>
     
-    <div class="question"><h3>
+    <div class="questions"><h3>
       
       <div id="qlist"></div>
       </h3>
