--- a/login.html
+++ b/login.html
@@ -1,7 +1,18 @@
 <html>
 	<head>
-		<title></title>
+		<title>What Should I Do?</title>
+		<link rel="stylesheet" type="text/css" href="login_style.css">
 	</head>
 	<body>
+		<h1 id="title">What Should I Do?</h1>
+		<h2 id="login">Log-in</h2>
+		<div class="main">
+			<span class="text">Username</span>
+			<div class="start">________</div>
+			<span class="text">Password</span>
+			<div class="start">______</div>
+
+		</div>
+		
 	</body>
 </html>
