--- a/login.html
+++ b/login.html
@@ -7,10 +7,10 @@
 		<h1 id="title">What Should I Do?</h1>
 		<h2 id="login">Log-in</h2>
 		<div class="main">
-			<span class="text">Username</span>
-			<div class="start">________</div>
-			<span class="text">Password</span>
-			<div class="start">______</div>
+			<span class="text">Username: </span>
+			<div class="edit">________</div>
+			<span class="text">Password: </span>
+			<div class="edit">______</div>
 
 		</div>
 		
