commit edited style

--- a/WSID.html
+++ b/WSID.html
@@ -7,14 +7,11 @@
 		<h1 id="title">What Should I Do?</h1>
 		<div class="main">
 			<span class="text">Should I </span>
-			<div class="start">________</div>
+			<div class="start" contentEditable="true">FILLER</div>
 			<span class="text"> or </span>
-			<div class="start">________</div>
+			<div class="start" contentEditable="true">FILLER</div>
 			<span class="text">?</span>
 		</div>
-		
-
-
 		<div class="login">
 		</div>
 	</body>
