--- a/login.html
+++ b/login.html
@@ -1,27 +1,19 @@
-<html>
-	<head>
-		<title>What Should I Do?</title>
-		<link rel="stylesheet" type="text/css" href="login_style.css">
-	</head>
-	<body>
-	    <div id='sbox'>
-        <h1>What Should I Do?</h1>
-        <span>Should I</span>
-        <div contentEditable='true'></div>
-        <span>or</span>
-        <div contentEditable='true'></div>
-        <span>?</span>
-      </div>
-	  
-		<h1 id="title">What Should I Do?</h1>
-		<h2 id="login">Log-in</h2>
-		<div class="main">
-			<span class="text">Username: </span>
-			<div contentEditable='true'>________</div>
-			<span class="text">Password: </span>
-			<div contendEditable='true'>______</div>
 
-		</div>
-		
-	</body>
+<html>
+  <head>
+  <title>What Should I Do?</title>
+  <link rel="stylesheet" type="text/css" href="static/style.css">
+  </head>
+
+  <body>
+      <div id='sbox'>
+        <h1>What Should I Do?</h1>
+        <h2>Log-in</h2>
+		<span>Username: </span>
+        <div contentEditable='true'></div>
+		<br></br>
+        <span>Password: </span>
+        <div contentEditable='true'></div>
+      </div>
+  </body>
 </html>
