added popup div

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <div contentEditable='true'></div>
         <span>?</span>
       </div>
+      
+      <div id='popup'>
+      </div>
   </body>
 </html>
