--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       
       <div class='popup'>
         <h1>Sign up:</h1>
-        <span>Username: </span>
-        <input name='uname' type='text'/><br/>
+        <span>Email: </span>
+        <input name='email' type='text'/><br/>
         <span>Password: </span>
-        <input name='pass' type='text'/><br/>
+        <input name='pword' type='text'/><br/>
         <span>Confirm: </span>
-        <input name='repass' type='text'/><br/>
-        <input type='button' value='Login'/>
+        <input name='repword' type='text'/><br/>
+        <input type='button' value='Login' onclick='doLogin()'/>
       </div>
   </body>
 </html>
