question and questions edited with logout

--- a/question.html
+++ b/question.html
@@ -5,8 +5,7 @@
 	</head>
 
 	<div>
-		<span id="top-right" type="login">Log-in</span>
-		<span id="top-right" type="signup">Sign up</span>
+		<span id="top-right" type="logout">Log-out</span>
 		<h1>WSID Question</h1>
 		<div class="question">
 			<div id="singleQ">
