--- a/questions.html
+++ b/questions.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-	<span id="top-right" type="login">Log-in</span>
-	<span id="top-right" type="signup">Sign up</span>
+	<span id="top-right" type="logout">Log-out</span>
 	<h1>WSID Questions</h1>
 	<span>Most recent (1-10)</span>
 	<div class="question">
