--- a/index.html
+++ b/index.html
@@ -18,19 +18,29 @@
       
       <div class='popup'>
         <h1>Sign up:</h1>
-        <span>Email: </span>
-        <input name='uname' type='text'/><br/>
-        <span>Password: </span>
-        <input name='pass' type='text'/><br/>
-        <span>Confirm: </span>
-        <input name='repass' type='text'/><br/>
-        <input type='button' value='Login'/>
-        <div id="fb-root"></div>
-        <!--
+		<div>
+			<span class='plain_text'>Email: </span>
+			<input class="input_field" name='uname' type='text'/><br/><br/>
+			<span class='plain_text'>Password: </span>
+			<input class="input_field" 'name='pass' type='text'/><br/><br/>
+			<span class='plain_text'>Confirm Password: </span>
+			<input class="input_field" name='repass' type='text'/><br/><br/>
+		</div>
+		<div class='login-button'>			
+			<input id="normal-login" type='button' value='Login'/>
+			<span>or login here</span>
+			<div id="fb-root"></div>
+			<!--
 		  Below we include the Login Button social plugin. This button uses the JavaScript SDK to
 		  present a graphical Login button that triggers the FB.login() function when clicked. -->
+			<fb:login-button show-faces="true"></fb:login-button>
 
-		<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+			
+		
+        </div>
+
+        
+
       </div>
   </body>
 </html>
