--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <title>What Should I Do?</title>
   <link rel="stylesheet" type="text/css" href="static/style.css">
   <script src="static/fblogin.js"></script>
+  
+  
+  <script>
+    function doLogin() {
+      var popup = document.getElementById('popup');
+      popup
+    }
+  </script>
+  
   </head>
 
   <body>
@@ -13,10 +22,11 @@
         <div contentEditable='true'></div>
         <span>or</span>
         <div contentEditable='true'></div>
-        <span>?</span>
+        <span>?</span><br/>
+        <input type="button" value="Consult the Masses"/>
       </div>
       
-      <div class='popup'>
+      <div id='popup' class='popup'>
         <h1>Sign up:</h1>
         <span>Email: </span>
         <input name='email' type='text'/><br/>
