adding blue to index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-	  
+	  <span id="top">What Should I Do?</span>
       <div id='sbox'>
         <h1>What Should I Do?</h1>
         <span>Should I</span>
@@ -28,7 +28,7 @@
 		</div>
 		<div class='login-button'>			
 			<input id="normal-login" type='button' value='Login'/>
-			<span>or login here</span>
+			<span>or with facebook</span>
 			<div id="fb-root"></div>
 			<!--
 		  Below we include the Login Button social plugin. This button uses the JavaScript SDK to
