lol i dunno, krupka things

--- a/questions.html
+++ b/questions.html
@@ -2,7 +2,9 @@
 
 <head>
 	<title>WSID Questions</title>
-	<link rel="stylesheet" type="text/css" href="static/questions_style.css">
+	<link rel="stylesheet" type="text/css" href="/static/questions_style.css">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="/static/load_qs.js"></script>
 </head>
 
 <body onload="load_qs('qlist',0)">
