--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ $def with ()
   
   </head>
 
-  <body>
+  <body>	
+    <button id="top-right" type="login" onClick="showRegister">Register</button>
+	<button id="top-right" type="login" onClick="showLogin">Log-in</button>
       <span id="top">What Should I Do?</span>
       <div id='sbox'>
         <span>Should I</span>
