--- a/questions.html
+++ b/questions.html
@@ -14,11 +14,11 @@
 	<script src="/static/pagination.js"></script>
   
   <script>
-    var pager = new paginator('qlist');
+    var pager = new pagination('qlist');
   </script>
 </head>
 
-<body><!-- onload="load_qs('qlist',0)"> -->
+<body onload="load_qs('qlist',0)">
 
 	<script src="dist/js/bootstrap.js"></script>
 	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
