--- a/question.html
+++ b/question.html
@@ -2,10 +2,37 @@
 	<head>
 		<title>WSID Questions</title>
 		<link rel="stylesheet" type="text/css" href="static/questions_style.css">
+		 <link rel="stylesheet" type="text/css" href="static/style.css">
+    	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    	<script src="static/fblogin.js"></script>
+    	<link rel="stylesheet" type="text/css" href="static/dist/css/bootstrap.min.css">
+    	<script src="static/dist/js/bootstrap.js"></script>
 	</head>
 
 	<div>
-		<span id="top-right" type="logout">Log-out</span>
+		<nav class="navbar navbar-default" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			  <a class="navbar-brand" href="#">What Should I Do?</a>
+			</div>
+			   <!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				  <ul class="nav nav-pullright">
+					<li class="nav-button" type="login" onclick="showLogout()">
+						<a href="#">Logout</a>
+					</li>
+				  </ul>
+				  
+				</div> 
+		
+		</nav>
 		<h1>WSID Question</h1>
 		<div class="question">
 			<div id="singleQ">
