prev questions added

--- a/questions.html
+++ b/questions.html
@@ -55,6 +55,7 @@
 		
 	</div>
 
+	<span id="bottom-right" onclick='pager.loadprev()'>Previous Questions</span>
 	<span id="bottom-right" onclick='pager.loadnext()'>More Questions</span>
 </body>
 
