--- a/questions.html
+++ b/questions.html
@@ -55,8 +55,8 @@
 		
 	</div>
 
-	<span id="bottom-right" onclick='pager.loadprev()'>Previous Questions</span>
-	<span id="bottom-right" onclick='pager.loadnext()'>More Questions</span>
+	<span id="bottom-right" onclick='pager.loadnext()'>Next page</span>
+	<span id="bottom-right" onclick='pager.loadprev()'>Previous page</span>
 </body>
 
 </html>
