li hover color added

--- a/question.html
+++ b/question.html
@@ -24,7 +24,10 @@
 			</div>
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				  <ul class="nav nav-pullright">
+				  <ul class="nav nav-pullright">a
+				  	<li class="nav-pullleft" style="float:left;">
+							<a href="about.html">About</a>
+					</li>
 					<li class="nav-button" type="login" onclick="showLogout()">
 						<a href="#">Logout</a>
 					</li>
