--- a/questions.html
+++ b/questions.html
@@ -4,14 +4,14 @@
 	
 	<title>WSID Questions</title>
 
-	<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<link rel="stylesheet" type="text/css" href="static/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/static/fblogin.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
-    <script src="/static/dist/js/bootstrap.js"></script>
+    <script src="static/fblogin.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/dist/css/bootstrap.min.css">
+    <script src="static/dist/js/bootstrap.js"></script>
 
-	<script src="/static/load_qs.js"></script>
-	<script src="/static/pagination.js"></script>
+	<script src="static/load_qs.js"></script>
+	<script src="static/pagination.js"></script>
   
   <script>
     var pager = new pagination('qlist');
@@ -37,6 +37,9 @@
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
+					<li class="nav-pullleft" style="float:left;">
+							<a href="about.html">About</a>
+					</li>
 					<li class="nav-button" type="login" onclick="showLogout()">
 						<a href="#">Logout</a>
 					</li>
