--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ $def with ()
 					<li class="nav-button" type="login" onclick="showLogin()">
 						<a href="#">Login</a>
 					</li>
-					<li class="nav-button" type="register" onclick="showReigster()">
+					<li class="nav-button" type="register" onclick="showRegister()">
 						<a href="#">Register</a>
 					</li>
 				  </ul>
