--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@ $def with ()
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
             <li class="nav-pullleft" style="float:left;">
-                <a href="about.html">About</a>
+                <a href="/u/about">About</a>
             </li>
   					<li class="nav-button" type="login" onclick="showLogin()">
   						<a href="#">Login</a>
   					</li>
-  					<li class="nav-button" type="register" onclick="showReigster()">
+  					<li class="nav-button" type="register" onclick="showRegister()">
   						<a href="#">Register</a>
   					</li>
 				  </ul>
