--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@ $def with ()
 <html>
   <head>
     <title>What Should I Do?</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="static/fblogin.js"></script>
-    <link rel="stylesheet" type="text/css" href="static/dist/css/bootstrap.min.css">
-    <script src="static/dist/js/bootstrap.js"></script>
+    <script src="/static/fblogin.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
+    <script src="/static/dist/js/bootstrap.js"></script>
 
 
     
