--- a/questions.html
+++ b/questions.html
@@ -38,7 +38,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
 					<li class="nav-pullleft" style="float:left;">
-							<a href="../about.html">About</a>
+							<a href="../about">About</a>
 					</li>
 					<li class="nav-button" type="login" onclick="showLogout()">
 						<a href="#">Logout</a>
