--- a/questions.html
+++ b/questions.html
@@ -58,8 +58,8 @@
 		
 	</div>
 
-	<span id="bottom-right" onclick='pager.loadnext()'>Next page</span>
-	<span id="bottom-right" onclick='pager.loadprev()'>Previous page</span>
+	<span id="bottom-left" onclick='pager.loadnext()'>Next page</span>
+	<span id="bottom-left" onclick='pager.loadprev()'>Previous page</span>
 </body>
 
 </html>
