--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ $def with ()
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="./index">What Should I Do?</a>
+			  <a class="navbar-brand" href="./">What Should I Do?</a>
 			</div>
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
             <li class="nav-pullleft" style="float:left;">
-                <a href="/u/about">About</a>
+                <a href="./u/about">About</a>
             </li>
   					<li class="nav-button" type="login" onclick="showLogin()">
   						<a href="#">Login</a>
