--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@ $def with ()
             <li class="nav-pullleft" style="float:left;">
                 <a href="./u/about">About</a>
             </li>
+			<li class="nav-pullleft" style="float:left;">
+                <a href="./u/questions">Questions</a>
+            </li>
   					<li class="nav-button" type="login" onclick="showLogin()">
   						<a href="#">Login</a>
   					</li>
