--- a/static/about.html
+++ b/static/about.html
@@ -24,8 +24,11 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
 					<li class="nav-pullleft" style="float:left;">
-						<a href="about.html">About</a>
+						<a href="./">About</a>
 					</li>
+					<li class="nav-pullleft" style="float:left;">
+                <a href="./questions">Questions</a>
+            </li>
 					<li class="nav-button" type="login" onclick="showLogin()">
 						<a href="#">Login</a>
 					</li>
