--- a/static/about.html
+++ b/static/about.html
@@ -24,7 +24,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
 					<li class="nav-pullleft" style="float:left;">
-						<a href="./">About</a>
+						<a href="./about">About</a>
 					</li>
 					<li class="nav-pullleft" style="float:left;">
                 <a href="./questions">Questions</a>
