--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,7 @@ $def with ()
       }
 
       function showLogout() {
-        $.ajax({
+        $$.ajax({
           url: "/s/logout",
           success: showLogin();
         });
