--- a/static/questions.html
+++ b/static/questions.html
@@ -40,6 +40,9 @@
 					<li class="nav-pullleft" style="float:left;">
 							<a href="../u/about">About</a>
 					</li>
+					<li class="nav-pullleft" style="float:left;">
+							<a href="./">Questions</a>
+					</li>
 					<li class="nav-button" type="login" onclick="showLogout()">
 						<a href="#">Logout</a>
 					</li>
