--- a/static/questions.html
+++ b/static/questions.html
@@ -41,7 +41,7 @@
 							<a href="../u/about">About</a>
 					</li>
 					<li class="nav-pullleft" style="float:left;">
-							<a href="./">Questions</a>
+							<a href="./questions">Questions</a>
 					</li>
 					<li class="nav-button" type="login" onclick="showLogout()">
 						<a href="#">Logout</a>
