--- a/static/index.html
+++ b/static/index.html
@@ -104,10 +104,13 @@ $def with ()
       </div>
       
       <div id='popup' class='popup'></div>
-      <div class="panel panel-default">
+
+	</div>
+  </body>
+  <footer>
+        <div class="panel panel-default">
 		<div class="panel-body" style="text-align:right;">
 			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
 	  </div>
-	</div>
-  </body>
+	 </footer>
 </html>
