--- a/static/about.html
+++ b/static/about.html
@@ -67,17 +67,19 @@
 		  </a>
 		</div>
 		<div class="item active">
-			<img src="/static/ariella.jpg" alt="jack.jpg">
+			<img src="static/ariella.jpg" alt="jack.jpg">
 		  <div class="carousel-caption">
 			<h3>...</h3>
 			<p><a class="btn btn-lg btn-primary" href="#" role="button">Ariella!</a></p>
 		</div>
 	</div>
-	<div class="panel panel-default">
+
+		
+	</body>
+	<footer>
+		<div class="panel panel-default">
 		<div class="panel-body" style="text-align:right;">
 			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
 	  </div>
-	</div>
-		
-	</body>
+	</div></footer>
 </html>
