--- a/static/question.html
+++ b/static/question.html
@@ -1,4 +1,4 @@
-$def with(q_id)
+$def with (q_id)
 <html>
 	<head>
 		<title>WSID Questions</title>
@@ -11,7 +11,7 @@ $def with(q_id)
     	<script src="/static/answer_paginator.js"></script>
       
       <script>
-        var pager = new paginator('question', q_id);
+        var pager = new pagination('question', $q_id);
       </script>
 	</head>
 
