--- a/static/question.html
+++ b/static/question.html
@@ -3,8 +3,8 @@ $def with (q_id)
 <html>
 	<head>
 		<title>WSID Questions</title>
-		<link rel="stylesheet" type="text/css" href="static/questions_style.css">
-		 <link rel="stylesheet" type="text/css" href="static/style.css">
+		<link rel="stylesheet" type="text/css" href="/static/questions_style.css">
+		 <link rel="stylesheet" type="text/css" href="/static/style.css">
     	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     	<script src="/static/fblogin.js"></script>
     	<link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
