--- a/static/questions.html
+++ b/static/questions.html
@@ -61,8 +61,8 @@
 		
 	</div>
 
-	<span id="bottom-left" onclick='pager.loadnext()'>Next page</span>
-	<span id="bottom-left" onclick='pager.loadprev()'>Previous page</span>
+	<span class="bottom-left" onclick='pager.loadnext()'>Next page</span>
+	<span class="bottom-left" onclick='pager.loadprev()'>Previous page</span>
 </body>
 
 </html>
