--- a/static/question.html
+++ b/static/question.html
@@ -49,7 +49,7 @@ $def with(q_id)
         
       </div>
       
-      <span></span>
+      <span>Comment</span>
 
       <span class="bottom-left" onclick='pager.loadnext()'>Next Page</span>
  </body>
