--- a/static/question.html
+++ b/static/question.html
@@ -34,7 +34,11 @@ $def with(q_id)
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav nav-pullright">a
               <li class="nav-pullleft" style="float:left;">
-                <a href="about.html">About</a>
+                <a href="../about">About</a>
+            </li>
+			<ul class="nav nav-pullright">a
+              <li class="nav-pullleft" style="float:left;">
+                <a href="../questions">Questions</a>
             </li>
             <li class="nav-button" type="login" onclick="showLogout()">
               <a href="#">Logout</a>
