--- a/static/question.html
+++ b/static/question.html
@@ -28,7 +28,7 @@ $def with(q_id)
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="../">What Should I Do?</a>
+          <a class="navbar-brand" href="../../">What Should I Do?</a>
         </div>
            <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
