--- a/static/question.html
+++ b/static/question.html
@@ -32,11 +32,11 @@ $def with(q_id)
         </div>
            <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav nav-pullright">a
+            <ul class="nav nav-pullright">
               <li class="nav-pullleft" style="float:left;">
                 <a href="../about">About</a>
             </li>
-			<ul class="nav nav-pullright">a
+			<ul class="nav nav-pullright">
               <li class="nav-pullleft" style="float:left;">
                 <a href="../questions">Questions</a>
             </li>
