--- a/static/index.html
+++ b/static/index.html
@@ -104,13 +104,11 @@ $def with ()
       </div>
       
       <div id='popup' class='popup'></div>
-
-	</div>
+      
+    <div style='position: relative; top: 65%' class="panel panel-default">
+      <div class="panel-footer navbar-fixed-bottom" style="text-align:right;">
+        By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
+      </div>
+    </div>
   </body>
-  <footer>
-        <div class="panel panel-default">
-		<div class="panel-body" style="text-align:right;">
-			By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
-	  </div>
-	 </footer>
 </html>
