--- a/static/index.html
+++ b/static/index.html
@@ -95,11 +95,12 @@ $def with ()
 	  
       <span id="top">What Should I Do?</span>
       <div id='sbox'>
-        <span>Should I</span>
+        <span style="font-size: 25px">Should I</span>
         <input type='text' id='opt1' contentEditable='true'/>
-        <span>or</span>
+        <span style="font-size: 25px">or</span>
         <input type='text'  id='opt2' contentEditable='true'/>
-        <span>?</span><br/>
+        <span style="font-size: 25px">?</span>
+        <br><br/>
         <input type="button" value="Consult the Masses" onclick="doAsk()">
       </div>
       
