--- a/static/questions.html
+++ b/static/questions.html
@@ -1,3 +1,4 @@
+$def with (sess)
 <html>
 
 <head>
@@ -12,6 +13,7 @@
 
 	<script src="/static/load_qs.js"></script>
 	<script src="/static/pagination.js"></script>
+    <script src="/static/sess.js"></script>
   
   <script>
     var pager = new pagination('qlist');
@@ -37,19 +39,26 @@
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
-					<li class="nav-pullleft" style="float:left;">
-							<a href="../u/about">About</a>
-					</li>
-					<li class="nav-pullleft" style="float:left;">
-							<a href="./questions">Questions</a>
-					</li>
-					<li class="nav-button" type="login" onclick="showLogout()">
-						<a href="#">Logout</a>
-					</li>
+            <li class="nav-pullleft" style="float:left;">
+                <a href="/u/about">About</a>
+            </li>
+            <li class="nav-pullleft" style="float:left;">
+                <a href="/u/questions">Questions</a>
+            </li>
+            $if sess is None:
+              <li class="nav-button" type="login" onclick="showLogin()">
+                <a href="#">Login</a>
+              </li>
+              <li class="nav-button" type="login" onclick="showRegister()">
+                <a href="#">Register</a>
+              </li>
+            $else:
+              <li class="nav-button" type="login" onclick="showLogout()">
+                <a href="#">Logout</a>
+              </li>
 				  </ul>
-				  
 				</div> 
-		
+      </div>
 		</nav>
 	
 	<h1>WSID Questions</h1>
@@ -61,8 +70,8 @@
 		
 	</div>
 
-	<span class="bottom-left" onclick='pager.loadnext()'>Next page</span>
 	<span class="bottom-left" onclick='pager.loadprev()'>Previous page</span>
+	<span class="bottom-right" onclick='pager.loadnext()'>Next page</span>
 </body>
 
 </html>
