--- a/static/questions.html
+++ b/static/questions.html
@@ -72,6 +72,13 @@ $def with (sess)
 
 	<span class="bottom-left" onclick='pager.loadprev()'>Previous page</span>
 	<span class="bottom-right" onclick='pager.loadnext()'>Next page</span>
+  
+      
+    <div style='position: relative; top: 65%' class="panel panel-default">
+      <div class="panel-footer navbar-fixed-bottom" style="text-align:right;">
+        By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
+      </div>
+    </div>
 </body>
 
 </html>
