--- a/static/questions.html
+++ b/static/questions.html
@@ -62,7 +62,7 @@ $def with (sess)
 		</nav>
 	
 	<h1>WSID Questions</h1>
-	<h3>Most recent</h3>
+	<h3>Should I...</h3>
 	
 	<div class="question">
 		
