--- a/static/about.html
+++ b/static/about.html
@@ -25,32 +25,31 @@ $def with (sess)
 			   <!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
-					<li class="nav-pullleft" style="float:left;">
-						<a href="/u/about">About</a>
-					</li>
-					<li class="nav-pullleft" style="float:left;">
-                <a href="/u/questions">Questions</a>
+            <li class="nav-pullleft" style="float:left;">
+              <a href="/u/about">About</a>
             </li>
-          $if sess is None:
-            <li class="nav-button" type="login" onclick="showLogin()">
-              <a href="#">Login</a>
-            </li>
-            <li class="nav-button" type="register" onclick="showReigster()">
-              <a href="#">Register</a>
-            </li>
-          $else:
-            <li class="nav-button" type="register" onclick="showLogout()">
-              <a href="#">Logout</a>
-            </li>
-            
+            <li class="nav-pullleft" style="float:left;">
+                  <a href="/u/questions">Questions</a>
+              </li>
+            $if sess is None:
+              <li class="nav-button" type="login" onclick="showLogin()">
+                <a href="#">Login</a>
+              </li>
+              <li class="nav-button" type="register" onclick="showReigster()">
+                <a href="#">Register</a>
+              </li>
+            $else:
+              <li class="nav-button" type="register" onclick="showLogout()">
+                <a href="#">Logout</a>
+              </li>
 				  </ul>
-				  
 				</div> 
+      </div>
 		</nav>
 		
 
     <div style='position: relative; top: 65%' class="panel panel-default">
-      <div class="panel-footer navbar-fixed-bottom" style="text-align:right;">
+      <div class="panel-footer navbar-fixed-bottom" style="text-align:right">
         By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
       </div>
     </div>
