--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@ $def with (sess)
   
   </head>
 
-  <body>
+  <body style="font-family:Calibri;">
 	 <nav class="navbar navbar-default" role="navigation">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
