--- a/static/about.html
+++ b/static/about.html
@@ -3,11 +3,11 @@ $def with (sess)
 <html>
   <head>
     <title>What Should I Do?</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="/static/fblogin.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
-    <script src="/staticdist/js/bootstrap.js"></script>
+    <script src="/static/dist/js/bootstrap.js"></script>
   </head>
 	<body>
 	 <nav class="navbar navbar-default" role="navigation">
@@ -46,9 +46,8 @@ $def with (sess)
 				</div> 
       </div>
 		</nav>
-		
 
-    <div style='position: relative; top: 65%' class="panel panel-default">
+    <div style='position: relative; top: 85%' class="panel panel-default">
       <div class="panel-footer navbar-fixed-bottom" style="text-align:right">
         By Krupcake, the Penn Head TA, Mahatma Gindi, Poliak - Copyright 2014
       </div>
