--- a/static/index.html
+++ b/static/index.html
@@ -37,10 +37,10 @@ $def with (sess)
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				  <ul class="nav nav-pullright">
             <li class="nav-pullleft" style="float:left;">
-                <a href="./u/about">About</a>
+                <a href="/u/about">About</a>
             </li>
 			<li class="nav-pullleft" style="float:left;">
-                <a href="./u/questions">Questions</a>
+                <a href="/u/questions">Questions</a>
             </li>
             $if sess is None:
               <li class="nav-button" type="login" onclick="showLogin()">
@@ -57,7 +57,7 @@ $def with (sess)
 				  </ul>
 				  
 				</div> 
-		
+      </div>
 		</nav>
 	  
       <span id="top">What Should I Do?</span>
