Calibri dammmmmiiiitit Poliak

--- a/static/about.html
+++ b/static/about.html
@@ -9,7 +9,7 @@ $def with (sess)
     <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
     <script src="/staticdist/js/bootstrap.js"></script>
   </head>
-	<body>
+	<body style="font-family:Calibri;">
 	 <nav class="navbar navbar-default" role="navigation">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
