--- a/static/about.html
+++ b/static/about.html
@@ -9,7 +9,7 @@ $def with (sess)
     <link rel="stylesheet" type="text/css" href="/static/dist/css/bootstrap.min.css">
     <script src="/static/dist/js/bootstrap.js"></script>
   </head>
-	<body style="font-family:Calibri;">
+	<body>
 	 <nav class="navbar navbar-default" role="navigation">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
@@ -47,6 +47,28 @@ $def with (sess)
 			</div>
 		</nav>
 		
+    <div class="bio">
+      <img src="/static/Ariella.jpg">
+      <p>Ariella Levine</p>
+      <p>University of Pennsylvania, Class of 2015</p>
+      <p>Major: Computer and Cognitive Science</p>
+      <br></br>
+      <img src="/static/Jack.jpg">
+      <p>Jack Gindi</p>
+      <p>University of Pennsylvania, Class of 2016</p>
+      <p>Major: Computer Science</p>
+      <br></br>
+      <img src="/static/Krupka.jpg">
+      <p>Daniel "Krupcake" Krupka</p>
+      <p>University of Pennsylvania, Class of 2016</p>
+      <p>Majors: (undergrad) Computer Science, (grad) Robotics</p>
+      <br></br>
+      <img src="/static/Adam.jpg">
+      <p>Adam Poliak</p>
+      <p>Johns Hopkins University, Class of 2016</p>
+      <p>Major: Computer Science</p>
+    </div>
+
 
     <div style='position: relative; top: 85%' class="panel panel-default">
       <div class="panel-footer navbar-fixed-bottom" style="text-align:right">
