--- a/static/about.html
+++ b/static/about.html
@@ -48,22 +48,22 @@ $def with (sess)
 		</nav>
 		
     <div class="bio">
-      <img src="/static/Ariella.jpg">
+      <img src="/static/ariella.jpg" width="200px" height="200px">
       <p>Ariella Levine</p>
       <p>University of Pennsylvania, Class of 2015</p>
       <p>Major: Computer and Cognitive Science</p>
       <br></br>
-      <img src="/static/Jack.jpg">
+      <img src="/static/jack.jpg" width="200px" height="200px">
       <p>Jack Gindi</p>
       <p>University of Pennsylvania, Class of 2016</p>
       <p>Major: Computer Science</p>
       <br></br>
-      <img src="/static/Krupka.jpg">
+      <img src="/static/krupka.jpg" width="200px" height="200px">
       <p>Daniel "Krupcake" Krupka</p>
       <p>University of Pennsylvania, Class of 2016</p>
       <p>Majors: (undergrad) Computer Science, (grad) Robotics</p>
       <br></br>
-      <img src="/static/Adam.jpg">
+      <img src="/static/Adam.jpg" width="200px" height="200px">
       <p>Adam Poliak</p>
       <p>Johns Hopkins University, Class of 2016</p>
       <p>Major: Computer Science</p>
