--- a/static/about.html
+++ b/static/about.html
@@ -55,19 +55,19 @@ $def with (sess)
         <div style='float:left'>
           <img src="/static/ariella.jpg" height="200px">
           <p>Ariella Levine</p>
-          <p>University of Pennsylvania, Class of 2015</p>
+          <p>UPenn, Class of 2015</p>
           <p>Major: Computer and Cognitive Science</p>
         </div>
         <div style='float:left'>
           <img src="/static/jack.jpg" height="200px">
           <p>Jack Gindi</p>
-          <p>University of Pennsylvania, Class of 2016</p>
+          <p>UPenn, Class of 2016</p>
           <p>Major: Computer Science</p>
         </div>
         <div style='float:left'>
           <img src="/static/krupka.jpg" height="200px">
           <p>Daniel "Krupcake" Krupka</p>
-          <p>University of Pennsylvania, Class of 2016</p>
+          <p>UPenn, Class of 2016</p>
           <p>Majors: (undergrad) Computer Science, (grad) Robotics</p>
         </div>
         <div style='float:left'>
