about page edited

--- a/static/about.html
+++ b/static/about.html
@@ -78,6 +78,7 @@ $def with (sess)
         </div>
       </div>
     </div>
+    <div>When we found out we were going to participate in HopHacks, we came upon one salient question: What Should We Do? It was then that we thought that building a platform through which people could simplify easy everyday decisions might be a project worth pursuing in the 36 hours that we had. It has been a fun and enlightening experience so we hope you enjoy this service as much as we enjoyed making it for you</p></div>
 
     <div id='popup' class='popup'></div>
 
